# arunalla-ai-system

./: .env.example  .gitignore  README.md  app.py  generate_api_keys.py  pyproject.toml  setup_admin.py  test_session.json
deployments/: README.md
deployments/docker/: .dockerignore  .env.example  DOCKER.md  Dockerfile  README.md  docker-compose.yml
deployments/gcp/: .gcloudignore  README.md  app.yaml  cloudbuild.yaml
processed/: pipeline_summary.json  sri_lanka_history_metadata.json  sri_lanka_history_text.txt  valid_sinhala_metadata.json  valid_sinhala_text.txt
src/agent_mesh/: README.md  __init__.py  __main__.py  mesh.py  test_integration.py  test_mesh_quick.py
src/agent_mesh/agents/: agent_factory.py  coordinator.py  vector_db_agent.py
src/agent_mesh/services/: __init__.py  vector_db_service.py
src/agent_mesh/tools/: __init__.py  vector_search_tool.py
src/edu_support_ai_system/: __init__.py  __main__.py  app.py  auth.py  config.py  database.py  database_models.py  database_pg.py  init_db.py  logging_config.py  models.py
src/edu_support_ai_system/routers/: admin.py  chat.py  history.py  session.py
src/edu_support_ai_system/services/: agent_manager.py
src/edu_support_ai_system/static/admin/: app.js  index.html  styles.css
tools/: __init__.py
tools/data_feeder/: __init__.py  app.py  downloader.py  pdf_extractor.py  pipeline.py
