[project]
name = "edu-support-ai-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.3",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "ceylonai-next==0.2.5",
    "qdrant-client>=1.7.0",
    "google-generativeai>=0.3.0",
]

[project.scripts]
edu-support-ai-system = "edu_support_ai_system.__main__:main"
agent-mesh = "agent_mesh.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
